Bugfix: Fix content on mobile

--- a/src/components/organisms/FilterRecruitment/index.scss
+++ b/src/components/organisms/FilterRecruitment/index.scss
@@ -3,10 +3,6 @@
 
   &_desc {
     margin-top: rem(16);
-
-    @include mobile-down {
-      margin-bottom: rem(150);
-    }
   }
 
   &_tab {
@@ -15,14 +11,21 @@
     border-radius: rem(5);
     margin: rem(40) auto 0;
     max-width: rem(325);
+
     @include desktop-up {
       max-width: rem(930) !important;
     }
+
     @include tablet-up {
       @include adjust-flex(unset, center);
     }
+
     @include mobile-up {
       max-width: rem(675);
+    }
+
+    @include small-mobile {
+      max-width: rem(250);
     }
 
     &_item {
